--- a/src/assets/style/layout/general.scss
+++ b/src/assets/style/layout/general.scss
@@ -5,3 +5,18 @@
 .waiting {
   color: yellowgreen;
 }
+
+// FOR ACCESSIBILITY
+.skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background: #000;
+  color: blue;
+  padding: 8px;
+  z-index: 100;
+
+  &:focus {
+    top: 0;
+  } 
+} 
