--- a/src/assets/style/layout/general.scss
+++ b/src/assets/style/layout/general.scss
@@ -20,3 +20,12 @@
     top: 0;
   } 
 } 
+
+.filtered-container {
+  max-height: 299px;
+  overflow-y: scroll;
+}
+
+// * {
+//   border: solid 1px black;
+// }
