--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
-@import 'layout/general';
+@import 'layout/variables';
+
+@import 'layout/cards',
+        'layout/catalog',
+        'layout/forms',
+        'layout/general';
