--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -5,4 +5,5 @@
 @import 'layout/cards',
         'layout/catalog',
         'layout/forms',
-        'layout/general';
+        'layout/general',
+        'layout/header';
