--- a/src/assets/style/layout/variables.scss
+++ b/src/assets/style/layout/variables.scss
@@ -4,3 +4,12 @@ $avocado: #C5D86D;
 $blue: #1A6DA4;
 $red: #E71D36;
 $orange:#F46036;
+
+// FONTS
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital@0;1&family=Nunito:wght@800&family=Roboto&display=swap');
+$body-font: 'Roboto', sans-serif;
+$header-font: 'Nunito', sans-serif;
+
+body {
+  font-family: $body-font;
+}
