Lots of updates and reusable input components

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -4,6 +4,7 @@
 
 @import 'layout/cards',
         'layout/catalog',
+        'layout/containers',
         'layout/forms',
         'layout/general',
         'layout/header';
