--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -2,7 +2,8 @@
 
 @import 'layout/variables';
 
-@import 'layout/cards',
+@import 'layout/accordions',
+        'layout/cards',
         'layout/catalog',
         'layout/containers',
         'layout/forms',
