--- a/src/assets/style/layout/_general.scss
+++ b/src/assets/style/layout/_general.scss
@@ -1,5 +1,12 @@
+.huh {
+  color: $red;
+  font-weight: bolder;
+  margin: 2rem 0;
+  text-align: center;
+}
+
 .gtg {
-  color: green;
+  color: $green;
 }
 
 .waiting {
@@ -24,6 +31,10 @@
 h1,h2,h3,h4,h5,h6 {
   font-family: $header-font;
   color: $blue;
+}
+
+h6 {
+  margin-left: 3rem;
 }
 
 .filtered-container {
