Working on underwriting with a new programs digest

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -2,6 +2,8 @@
 
 @import 'layout/variables';
 
+@import 'facets/underwriting';
+
 @import 'layout/accordions',
         'layout/cards',
         'layout/catalog',
