This runs with local hosting, committing so i can start a new branch

--- a/src/assets/style/layout/_forms.scss
+++ b/src/assets/style/layout/_forms.scss
@@ -111,6 +111,13 @@
   margin: auto;
 }
 
+.checkbox-grid {
+  margin-left: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 columns */
+  gap: .5rem; /* Space between checkboxes */
+}
+
 
 
 
