--- a/src/assets/style/layout/_catalog.scss
+++ b/src/assets/style/layout/_catalog.scss
@@ -7,7 +7,7 @@
   // padding: .75rem;
   p {
     border-radius: $border-radius;
-    padding: .25rem;
+    padding: .25rem 1.5rem;
     border: solid $blue 1px;
     margin-bottom: 0;
   }
