--- a/src/assets/style/layout/_forms.scss
+++ b/src/assets/style/layout/_forms.scss
@@ -118,6 +118,18 @@
   gap: .5rem; /* Space between checkboxes */
 }
 
+.validation-error {
+  color: $red;
+  p {
+    text-align: center;
+  }
+}
+
+.required {
+  color: $red;
+}
+
+
 
 
 
