--- a/src/assets/style/layout/_general.scss
+++ b/src/assets/style/layout/_general.scss
@@ -1,16 +1,22 @@
+@use '../layout/variables' as vars;
+
+body {
+  font-family: vars.$body-font;
+}
+
 .huh {
-  color: $red;
+  color: vars.$red;
   font-weight: bolder;
   margin: 2rem 0;
   text-align: center;
 }
 
 .gtg {
-  color: $green;
+  color: vars.$green;
 }
 
 .waiting {
-  color: yellowgreen;
+  color: vars.$green;
 }
 
 // FOR ACCESSIBILITY
@@ -19,7 +25,7 @@
   top: -40px;
   left: 0;
   background: #000;
-  color: blue;
+  color: vars.$orange;
   padding: 8px;
   z-index: 100;
 
@@ -29,8 +35,8 @@
 } 
 
 h1,h2,h3,h4,h5,h6 {
-  font-family: $header-font;
-  color: $blue;
+  font-family: vars.$header-font;
+  color: vars.$blue;
 }
 
 h6 {
@@ -42,6 +48,3 @@ h6 {
   overflow-y: scroll;
 }
 
-// * {
-//   border: solid 1px black;
-// }
